Stop side panel stretching as tree expands

--- a/static-content/aardvark.css
+++ b/static-content/aardvark.css
@@ -29,6 +29,7 @@ html, body { margin: 0; height: 100%; width: 100%; }
     font-weight: bold;
 }
 .content-panel {
+    height: 100%;
     flex: 1 1 auto;
     
     display: flex;
